Refactor PersistentSessionManager to enhance token handling and add UUID caching